--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
             android:layout_marginStart="90dp"
             android:layout_marginTop="60dp"
             android:layout_marginEnd="50dp"
-            android:text="Ntvf"
+            android:text="Выберите раздел"
             android:textColor="#CC000000"
             android:textSize="28sp"
             android:textStyle="normal" />
